[gd_scene load_steps=3 format=2]

[ext_resource path="res://Circle.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Circle" type="Node2D"]

script = ExtResource( 1 )
current_angle = 0
color = null

[node name="MouseArea" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Shape" type="CollisionShape2D" parent="MouseArea" index="0"]

shape = SubResource( 1 )

[connection signal="mouse_entered" from="MouseArea" to="." method="_on_MouseArea_mouse_entered"]

[connection signal="mouse_exited" from="MouseArea" to="." method="_on_MouseArea_mouse_exited"]


